Section 6 hw - GC type & Executor memory set.